修正:本文の追加とタイトル文字にh1タグ追加

--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
         <title>test</title>
     </head>
     <body>
-        テスト
+        <h1>テスト</h1>
+        <p>testテストてすと</p>
     </body>
 </html>
